[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
redis = { version = "0.32.5", features = ["tokio-comp"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.47.1", features = ["full"] }
